structmeta-tests/tests/compile_fail/struct_meta/similar_name.rs
#[structmeta_tests::attr_required_name_value(vaue = 10)]
fn my_func() {}

fn main() {}
